Fixed all layout issues

--- a/src/components/vaporboyDesktop/vaporboyDesktop.scss
+++ b/src/components/vaporboyDesktop/vaporboyDesktop.scss
@@ -1,7 +1,3 @@
-.vaporboy-desktop-bg {
-  background-color: $aesthetic-windows-95-green;
-}
-
 .vaporboy-desktop {
   position: fixed;
   top: 0px;
